[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libtest"
version = "0.1.0a1"
description = "CLI para teste de libs"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
libtest = "libtest.cli:main"
