[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libtest"
version = "0.1.0a3"
description = "CLI para teste de libs"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click~=8.3",
    "oxigenpy==0.1.0a1",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
]

[project.scripts]
libtest = "libtest.cli:main"
